# skjra

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: release-executable.yaml
src/: app.rs  main.rs
src/app/: utils.rs  window.rs
src/app/components/: common.rs  dashboard.rs
src/app/components/common/: dialog.rs  drawer.rs  select.rs
src/app/components/dashboard/: card.rs  card_detail.rs
src/app/views/: dashboard.rs
